finish addbook endpoint
